# NotesCube

./: .gitignore  bs-config.json  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: main.py
app/core/: __init__.py  config.py  converter.py  decorators.py  reused_types.py
app/core/reused_types/: __init__.py  pydantic_types.py  sqlalchemy_types.py
app/database/: __init__.py  abstract_database.py  database.py  fill_database.py  users_database.py
app/frontend/: index.html  package-lock.json  package.json  script.js
app/frontend/src/: html_manager.js  path.js  request.js  user_repository.js
app/frontend/styles/: core.css  main.css
app/models/: __init__.py  abstract.py  note_model.py  user_model.py
app/repositories/: __init__.py  notes_repository.py  users_repository.py
app/routers/: __init__.py  notes_router.py  users_router.py
app/schemas/: __init__.py  note.py  user.py
